# soap

./: .gitignore  Cargo.toml  LICENSE
docs/: todo.md
example/: addition.rs  bool.rs  navigation.rs  town.rs
src/: action.rs  distance.rs  field.rs  goal.rs  lib.rs  planner.rs  requirement.rs  state.rs
src/requirement/: compare.rs  mod.rs
