[package]
name = "soap"
version = "0.1.0"
edition = "2018"
description = "Goal Oriented Action Planner (GOAP) implementation with support for complex data types"

[[example]]
name = "bool"
path = "example/bool.rs"
[[example]]
name = "addition"
path = "example/addition.rs"
[[example]]
name = "town"
path = "example/town.rs"

[dependencies]
anyhow = "1.0.42"
pathfinding = "2.2.1"
serde = "1.0.127"
serde_json = "1.0.66"
log = "0.4.14"
pretty_env_logger = "0.4.0"
